<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:text="@string/label_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="12sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drinking_time_start_text_view"
                tools:text="3:00PM"
                android:contentDescription="@string/a11y_started_drinking_time"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
                android:text="@string/label_beer_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="12sp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <Spinner
                    android:id="@+id/volume_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/a11y_beer_volume"/>

        </LinearLayout>

        <TextView
                android:text="@string/label_beer_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="12sp"/>

        <LinearLayout
                android:id="@+id/linear_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/decrement_beers_button"
                    android:text="-"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/a11y_decrement_beer_count"
                    android:layout_weight="1"/>

            <EditText
                    android:focusable="false"
                    android:id="@+id/total_beers_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/a11y_beer_count"
                    android:text="0 beers had"
                    android:ems="10"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:inputType="number"/>

            <Button
                    android:id="@+id/increment_beers_button"
                    android:text="+"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/a11y_increment_beer_count"
                    android:layout_weight="1"/>
        </LinearLayout>

        <TextView
                android:id="@+id/bac_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/a11y_bac"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textAlignment="center"
                android:gravity="center"
                tools:text="BAC: 0.000%"
                android:layout_marginTop="24dp"
                android:layout_weight="1"/>

    </LinearLayout>

</FrameLayout>